--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
